# Scotsman_Monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  deploy.sh  main.py  pyproject.toml  scotsman_ice_gateway_complete_spec.md  scotsman_ksbun_tool.py  setup.sh
Scotsman KSBU-N support disc files-20260430T024427Z-3-001/Scotsman KSBU-N support disc files/: autorun.inf
config/: config.example.toml  ksbun_gateway.toml
docs/superpowers/plans/: 2026-05-01-phase1-implementation.md  2026-05-05-argus-service-user.md  2026-05-05-phase1-testing-fixes.md  2026-05-05-security-hardening.md
docs/superpowers/specs/: 2026-05-01-phase1-project-structure-design.md  2026-05-05-argus-service-user-design.md  2026-05-05-phase1-testing-fixes-design.md  2026-05-05-security-hardening-design.md
scripts/: 00_README.sh  01_setup_os.sh  02_create_argus.sh  02_setup_network.sh  03_setup_network.sh  03_setup_tailscale.sh  04_setup_onewire.sh  04_setup_tailscale.sh  05_setup_onewire.sh  05_setup_python.sh  06_deploy_app.sh  06_setup_app.sh  07_deploy_service.sh  07_status_report.sh  watchdog_check.sh
src/ice_gateway/: config.py  constants.py  database.py  logging_setup.py  main.py  models.py
src/ice_gateway/dashboard/: app.py  routes.py
systemd/: ice-gateway-watchdog.service  ice-gateway.service
tests/: conftest.py  test_config.py  test_database.py  test_logging_setup.py  test_models.py
tests/dashboard/: test_routes.py
tests/fixtures/: config_missing_sensor_id.toml  config_valid.toml
tests/sensors/: test_onewire.py  test_pi_health.py
tests/tasks/: test_polling.py
(+28 files in other folders)
