[project]
name = "scotsman-monitor"
version = "0.1.0"
description = "Raspberry Pi monitoring gateway for Scotsman Prodigy ice machine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings[toml]>=2.3",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0",
    "psutil>=6.0",
    "jinja2>=3.1",
    "requests>=2.33.1",
]

[project.scripts]
ice-gateway = "ice_gateway.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-psutil>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ice_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/ice_gateway"]
